common/base/ingresses/nguiland.yaml
# CAUTION: The order of the rules and tls matter in overlays. Don't change the order. Any new element should be appended instead
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
  name: nguiland
  namespace: infra
spec:
  ingressClassName: nginx
  rules:
    - host: ${ACTIFACTORY_JCR_HOST}
      http:
        paths:
          - backend:
              service:
                name: artifactory-jcr
                port:
                  number: 8082
            path: /
            pathType: Prefix
    - host: ${KEYCLOAK_HOST}
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: ${OSTOCK_ANGULAR_FRONTEND_HOST}
      http:
        paths:
          - backend:
              service:
                name: ostock-angular-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: ${OSTOCK_GATEWAY_SERVICE_HOST}
      http:
        paths:
          - backend:
              service:
                name: ostock-gateway-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts: []
      secretName: nguiland
